--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "pino-pretty": "^13.0.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
-    "systeminformation": "^5.25.11"
+    "systeminformation": "^5.25.11",
+    "zod": "^3.24.2"
   },
   "trustedDependencies": [
     "protobufjs"
